crates/oxc_react_compiler/tests/snapshots/nested-scopes-hook-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/nested-scopes-hook-call.js
---
function component(props) {
	const x = [];
	const y = [];
	y.push(useHook(props.foo));
	x.push(y);
	return x;
}
