crates/oxc_react_compiler/tests/snapshots/new-spread.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-spread.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(3);
	let t0;
	if ($[0] !== props.bar || $[1] !== props.foo) {
		t0 = new Foo(...props.foo, null, ...[props.bar]);
		$[0] = props.bar;
		$[1] = props.foo;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	const x = t0;
	return x;
}
