crates/oxc_react_compiler/tests/snapshots/new-target-meta-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-target-meta-property.js
---
import { c as _c } from "react/compiler-runtime";
import { Stringify } from "shared-runtime";
function foo() {
	const $ = _c(1);
	const nt = new.target;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Stringify value={nt} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
